- Fixed bug #47801 (__call() accessed via parent:: operator is provided incorrect method name)